--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
                 <img src="./img/menu.png" />
                 <ion-icon onclick="abreMenu()" name="people"></ion-icon>
             </div>
-            <ul class="msg-box">
-
-            </ul>
+            <div class="msg-box">
+                <ul class="msg-list">
+    
+                </ul>
+            </div>
             <div class="menu enviar-mensagem">
                 <input type="text" placeholder="Escreva aqui..." onkeydown="enviarComEnter(this)"/>
                 <ion-icon name="paper-plane-outline" onclick="enviaMensagem(this)"></ion-icon>
