--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             para enviar mensagem:</h1>
                     </div>
                     
-                    <div class="contato todos"> 
+                    <div class="contato todos destinatario " onclick="enviarPara(this)"> 
                         <ion-icon name="people"></ion-icon>
                         <div>
                             <p>Todos</p>
