--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h1>Escolha a visibilidade</h1>
                     </div>
                     
-                    <div class="restricao">
+                    <div class="restricao tipo1" onclick="restricaoMsg(this)">
                         <ion-icon name="lock-open"></ion-icon>
                         <div>
                             <p>Público</p>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
 
-                    <div class="restricao">
+                    <div class="restricao tipo2" onclick="restricaoMsg(this)">
                         
                         <ion-icon name="lock-closed"></ion-icon>
                         <div>
